# NEW-NEW-QUANTUM

./: CHECKLIST_FASE_3.md  CMakeLists.txt  README.md  ROADMAP_FASES_1_2.md
NEW-NEW-QUANTUM-main/: LICENSE
NEW-NEW-QUANTUM-main/new_Quantum_GUI/config/shaders/core/: cube_instanced.vert
NEW-NEW-QUANTUM-main/new_Quantum_GUI/config/shaders/postprocess/: quad.vert
NEW-NEW-QUANTUM-main/new_Quantum_GUI/config/src/graphics/api/: Framebuffer.cpp  Shader.hpp
NEW-NEW-QUANTUM-main/new_Quantum_GUI/config/src/graphics/scene/: QuantumCubeField.cpp
NEW-NEW-QUANTUM-main/new_Quantum_GUI/config/src/interface/: VisualMapper.hpp
NEW-NEW-QUANTUM-main/new_Quantum_GUI/config/src/science/neuro/: NeuroInterface.cpp  NeuroInterface.hpp  SignalProcessor.cpp
NEW-NEW-QUANTUM-main/new_Quantum_GUI/config/src/science/quantum/: QuantumState.cpp
new_Quantum_GUI/config/shaders/core/: cube_instanced.frag
new_Quantum_GUI/config/shaders/postprocess/: bloom.frag
new_Quantum_GUI/config/src/core/: Engine.cpp  Engine.hpp  Kernel.cpp  Kernel.hpp
new_Quantum_GUI/config/src/glad/: glad.h
new_Quantum_GUI/config/src/glm/: glm.hpp
new_Quantum_GUI/config/src/graphics/api/: GladStub.cpp  Shader.cpp
new_Quantum_GUI/config/src/graphics/renderer/: Renderer.cpp  Renderer.hpp
new_Quantum_GUI/config/src/graphics/scene/: Camera.hpp  QuantumCubeField.hpp
new_Quantum_GUI/config/src/science/neuro/: NeuroInterface.hpp  SignalProcessor.hpp
new_Quantum_GUI/config/src/science/quantum/: QuantumState.hpp
